--- a/www/erupe/css/main.css
+++ b/www/erupe/css/main.css
@@ -16,13 +16,16 @@ p {
 	cursor: default;
 }
 
-body { 
+body {
   font-family: 'ms-pgothic';
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
 	background-size: cover;
 	font-size: 11px;
+  background-image: url("../resources/bg.png");
+  font-family: sans-serif;
+  font-weight: lighter;
 }
 
 html,body {
@@ -57,30 +60,17 @@ html,body {
     padding-right: 5px;
     float: right;
 }
-#exit {
-    color: rgba(200,200,200,1);
-    background-color: rgba(0,0,0,0.9);
-    display: block!important;
-    padding: .1rem 1.1rem!important;
-    text-align: center!important;
-}
 
-#exit:hover{
-	color: rgba(255,255,255,1);
-	background-color: rgba(255,0,0,0.9);
+.nav-link {
+  color: rgba(200,200,200,1);
+  background-color: rgba(0,0,0,0.9);
+  display: block!important;
+  padding: .1rem 1.1rem!important;
+  text-align: center!important;
 }
-
-#Reduce{
-    color: rgba(200,200,200,1);
-    background-color: rgba(0,0,0,0.9);
-    display: block!important;
-    padding: .1rem 1.1rem!important;
-    text-align: center!important;
-}
-
-#Reduce:hover{
-	color: rgba(255,255,255,1);
-	background-color: rgba(200,200,200,1);
+.nav-link:hover {
+  color: rgba(255,255,255,1);
+  background-color: rgba(255,0,0,0.9);
 }
 
 #logo {
@@ -152,7 +142,7 @@ height:38px;
 }
 
 #submitForm:hover {
-	background: url("../ressources/bt_config_hover.png") no-repeat scroll 0 0 transparent;
+	background: url(../resources/bt_config_hover.png) no-repeat scroll 0 0 transparent;
 	cursor: pointer;
 	height: 32px;
 	margin-top: 7px;
@@ -163,13 +153,263 @@ height:38px;
 }
 
 #submitForm {
-	background: url("../ressources/bt_config.png") no-repeat scroll 0 0 transparent;
+	background: url(../resources/bt_config.png) no-repeat scroll 0 0 transparent;
 	cursor: pointer;
 	height: 32px;
 	margin-top: 7px;
 	width: 285px;
     position: relative;
     left: 140px;
+}
+
+#submitButton{
+  background: url(../resources/bt_launch.png) no-repeat scroll 0 0 transparent;
+  color: rgba(255,255,255,1);
+  cursor: pointer;
+  font-weight: bold;
+  height: 74px;
+  position:relative;
+  right: 23px;
+  margin-top: 5px;
+  width: 308px;
+}
+
+#submitButton:hover{
+  background: url(../resources/bt_launch_hover.png) no-repeat scroll 0 0 transparent;
+  color: rgba(255,255,255,1);
+  cursor: pointer;
+  font-weight: bold;
+  height: 74px;
+  position:relative;
+  right: 23px;
+  margin-top: 5px;
+  width: 308px;
+}
+
+#CheckBoxSaveUser{
+	font-size: 15px!important;
+    width: 150px!important;
+    height: 22px!important;
+    color: rgba(200, 200, 200, 1);
+    position: relative!important;
+    left: 150px!important;
+	top: 3px!important;
+    cursor: pointer!important;
+	text-shadow: #000 2px 2px!important;
+}
+
+#CheckBoxSaveUser:hover{
+    color: rgba(255, 255, 255, 1);
+}
+
+#loginform{
+	position: relative;
+    left: 100px;
+	text-shadow: #000 2px 2px;
+}
+
+.char-select-list {
+    height: 15em;
+    overflow-y: scroll;
+}
+
+.form-control {
+    display: block;
+    width: 100%;
+    height: calc(1.1em + .75rem + 2px);
+    padding: .375rem .75rem;
+    font-size: 13px;
+    font-weight: 400;
+    line-height: 1.1;
+    color: rgba(255,255,255,1);
+    background-color: rgba(0,0,0,0.9);
+    background-clip: padding-box;
+    border: 0.1px solid rgba(100,100,100,0.9)!important;
+    border-radius: .25rem;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+.form-group {
+	    position: relative;
+		left: 3px;
+		margin-bottom: .4rem;
+}
+
+.form-control:focus
+{
+    display: block;
+    width: 100%;
+    height: calc(1.1em + .75rem + 2px);
+    padding: .375rem .75rem;
+    font-size: 13px;
+    font-weight: 400;
+    line-height: 1.1;
+    color: rgba(255,255,255,1);
+    background-color: rgba(0,0,0,0.9);
+    background-clip: padding-box;
+    border: 0.1px solid rgba(100,100,100,0.9);
+    border-radius: .25rem;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+	box-shadow: 0px 0px 0px 0.2rem rgba(255,255,255,0)
+}
+
+input[readonly] {
+  pointer-events: none;
+}
+
+:-ms-input-placeholder.form-control	{
+	    color: rgba(255,255,255,0.9);
+}
+
+.form-control:disabled, .form-control[readonly] {
+    color: rgba(255, 255, 255, 1);
+    background-color: rgba(0,0,0,0.9);
+}
+
+input, select, textarea{
+    color: #ff0000;
+}
+
+.btn-primary{
+	color: #fff;
+	border-color: rgba(0,0,0,0)!important;;
+	background-color: rgba(0,0,0,0)!important;
+	box-shadow:0px 0px 0px rgba(0,0,0,0)!important;
+	height: 100%;
+    width: 100%;
+}
+
+.btn-primary.focus, .btn-primary:focus{
+	    color: #fff;
+	border-color: rgba(0,0,0,0);
+	background-color: rgba(0,0,0,0);
+    height: 100%;
+    width: 100%;
+	  box-shadow:0px 0px 0px rgba(0,0,0,0);
+}
+
+.btn-primary:active{
+	background-color: rgba(0,0,0,0);
+}
+
+.btn-primary:hover {
+    color: #fff;
+	border-color: rgba(0,0,0,0);
+	background-color: rgba(0,0,0,0);
+    height: 100%;
+    width: 100%;
+}
+
+#bt_confirm {
+    background: url(../resources/bt_launch.png) no-repeat scroll 0 0 transparent;
+    position: relative;
+    top: 10px;
+    left: 102px;
+    color: rgba(200,200,200,1);
+    cursor: pointer;
+    font-weight: bold;
+    height: 74px;
+    width: 308px;
+}
+
+#bt_confirm:hover{
+background: url(../resources/bt_launch_hover.png) no-repeat scroll 0 0 transparent;
+    position: relative;
+    top: 10px;
+    left: 102px;
+    color: rgba(255,255,255,1);
+    cursor: pointer;
+    font-weight: bold;
+    height: 74px;
+    width: 308px;
+}
+
+#bt_new_char {
+    background: url(../resources/bt_sub.png) no-repeat scroll 0 0 transparent;
+    background-size: 167px 33px;
+    position: relative;
+    top: 6px;
+    right: 81px;
+    color: rgba(200,200,200,1);
+    cursor: pointer;
+    font-size: 11px;
+    height: 33px;
+    width: 167px;
+}
+
+#bt_new_char:hover{
+background: url(../resources/bt_sub_hover.png) no-repeat scroll 0 0 transparent;
+    background-size: 167px 33px;
+    position: relative;
+    top: 6px;
+    right: 81px;
+    color: rgba(255,255,255,1);
+    cursor: pointer;
+    font-size: 11px;
+    height: 33px;
+    width: 167px;
+}
+
+#bt_delete_char {
+    background: url(../resources/bt_sub.png) no-repeat scroll 0 0 transparent;
+    background-size: 167px 33px;
+    position: relative;
+    top: 6px;
+    left: 262px;
+    color: rgba(200,200,200,1);
+    cursor: pointer;
+    font-size: 11px;
+    height: 33px;
+    width: 167px;
+}
+
+#bt_delete_char:hover{
+    background: url(../resources/bt_sub_hover.png) no-repeat scroll 0 0 transparent;
+    background-size: 167px 33px;
+    position: relative;
+    top: 6px;
+    left: 262px;
+    color: rgba(255,255,255,1);
+    cursor: pointer;
+    font-size: 11px;
+    height: 33px;
+    width: 167px;
+}
+
+#bt_up_char_list {
+    background: url(../resources/bt_up_charsel.png) no-repeat scroll 0 0 transparent;
+    position: absolute;
+    top: 0px;
+    left: 232px;
+    width: 91px;
+    height: 25px;
+}
+
+#bt_up_char_list:hover {
+    background: url(../resources/bt_up_charsel_hover.png) no-repeat scroll 0 0 transparent;
+    position: absolute;
+    top: 0px;
+    left: 232px;
+    width: 91px;
+    height: 25px;
+}
+
+#bt_down_char_list {
+    background: url(../resources/bt_down_charsel.png) no-repeat scroll 0 0 transparent;
+    position: absolute;
+    top: 133px;
+    left: 230px;
+    width: 91px;
+    height: 25px;
+}
+
+#bt_down_char_list:hover {
+    background: url(../resources/bt_down_charsel_hover.png) no-repeat scroll 0 0 transparent;
+    position: absolute;
+    top: 133px;
+    left: 230px;
+    width: 91px;
+    height: 25px;
 }
 
 .container-fluid {
@@ -181,8 +421,8 @@ height:38px;
 }
 
 #alertBox{
-	width: 100%; 
-	height: 100%; 
+	width: 100%;
+	height: 100%;
 	overflow: auto;
 }
 
@@ -278,15 +518,15 @@ button.close {
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #f1f1f1; 
+  background: #f1f1f1;
 }
- 
+
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #888; 
+  background: #888;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #555; 
+  background: #555;
 }
