--- a/www/erupe/css/main.css
+++ b/www/erupe/css/main.css
@@ -35,9 +35,9 @@ body{background:#092314; font-family:sans-serif; color:#d1c0a5; font-size:14px; 
 #log_outer .log_inner span.red{color:#bd2130;}
 
 #login{width:300px; height:265px; position:absolute; left:129px; top:140px;}
-#login .login_button{position:absolute; left:-3px; top:167px; width:300px; height:64px; background-image:url(../img/button_launch.png); cursor:pointer;}
-#login .login_button:hover,#login .login_button.hover{background-image:url(../img/button_launch_hover.png);}
-#login .login_button span{position:absolute; font-size:24px; font-weight:bold; left:113px; top:23px; color:white; cursor:pointer;}
+#login .login_button{position:absolute; left:-3px; top:167px; width:300px; height:64px; background-image:url(../img/button_launch.png); cursor:pointer; display:flex; justify-content:center; align-items:center;}
+#login .login_button:hover{background-image:url(../img/button_launch_hover.png);}
+#login .login_button span{font-size:24px; font-weight:bold; left:113px; top:23px; color:white; cursor:pointer;}
 
 #login .login_save{width:135px; height:12px; position:absolute; left:81px; top:236px; cursor:pointer; color:white;}
 
@@ -56,7 +56,7 @@ body{background:#092314; font-family:sans-serif; color:#d1c0a5; font-size:14px; 
 #login #processing{display:none; position:absolute; left:-7px; top:-3px; width:307px; height:271px; background-color:rgba(0,0,0,0.8); background-image:url(../img/load.gif); background-position:center; background-size:50px 50px; background-repeat:no-repeat; border-radius:2px 2px 2px 2px; z-index:1;}
 #login #processing p{color:#fff; text-align:center; width:100%; position:absolute; left:0; top:160px; z-index:2;}
 
-#char_select{width:520px; height:378px; position:absolute; left:35px; top:115px; color:#313131; display:none;}
+#char_select{width:490px; height:290px; position:absolute; left:35px; top:115px; color:#313131; display:none;}
 #char_select #units{width:398px; height:100px; position:absolute; left:45px; top:50px; background-image:url(../img/button_charsel_char.jpg);}
 
 #char_select #units .unit{display:none; width:398px; height:100px; position:absolute; left:0; cursor:default;}
@@ -70,20 +70,20 @@ body{background:#092314; font-family:sans-serif; color:#d1c0a5; font-size:14px; 
 #char_select #units .unit *{color:white; font-size:16px; position:absolute;}
 #char_select #units .unit img{top:42px; left:18px;}
 #char_select #units .unit #char_name{top:15px; font-size:30px; width:100%; text-align:center;}
-#char_select #units .unit #char_weapon{top:70px; left:80px; font-weight:bold;}
+#char_select #units .unit #char_weapon{top:70px; left:72px; font-weight:bold; width:120px; text-align:center;}
 #char_select #units .unit #char_hr{top:43px; left:210px;}
-#char_select #units .unit #char_gr{top:43px; left:260px;}
-#char_select #units .unit #char_sex{top:43px; left:310px;}
+#char_select #units .unit #char_gr{top:43px; left:280px;}
+#char_select #units .unit #char_sex{top:43px; left:350px;}
 #char_select #units .unit #char_uid{top:58px; left:210px;}
 #char_select #units .unit #char_login{top:73px; left:210px;}
 
-#char_select .weapon_text{position:absolute; font-weight:bold; top:98px; left:117px; color:white;}
+#char_select .weapon_text{position:absolute; font-weight:bold; width:120px; top:98px; left:117px; color:white; text-align:center;}
 
 #char_select .auto_login{position:absolute; top:155px; left:50px; color:white; cursor:pointer;}
 
 #char_select .button_add,
 #char_select .button_del,
-#char_select .button_log{width:130px; height:33px; position:absolute; top:195px; background-image:url(../img/button_option.png); cursor:pointer; z-index:1000;}
+#char_select .button_log{width:130px; height:33px; position:absolute; top:195px; background-image:url(../img/button_option.png); cursor:pointer; z-index:1000; display:flex; justify-content:center; align-items:center;}
 
 #char_select .button_add{left:40px;}
 #char_select .button_del{left:179px;}
@@ -91,42 +91,26 @@ body{background:#092314; font-family:sans-serif; color:#d1c0a5; font-size:14px; 
 
 #char_select .button_add span,
 #char_select .button_del span,
-#char_select .button_log span{position:absolute; font-size: 14px; color:white; cursor:pointer; top:8px;}
-
-#char_select .button_add span{left:18px}
-#char_select .button_del span{left:12px}
-#char_select .button_log span{left:39px}
+#char_select .button_log span{font-size: 14px; color:white; cursor:pointer;}
 
 #char_select .button_add:hover,
 #char_select .button_del:hover,
 #char_select .button_log:hover{background-image:url(../img/button_option_hover.png);}
 
-#char_select .button_start{width:300px; height:64px; position:absolute; left:90px; top:229px; background-image:url(../img/button_launch.png); cursor:pointer; z-index:1000;}
+#char_select .button_start{width:300px; height:64px; position:absolute; left:90px; top:229px; background-image:url(../img/button_launch.png); cursor:pointer; z-index:1000; display:flex; justify-content:center; align-items:center;}
 #char_select .button_start:hover{background-image:url(../img/button_launch_hover.png);}
-#char_select .button_start span{position:absolute; font-size:24px; font-weight:bold; left:110px; top:23px; color:white; cursor:pointer;}
+#char_select .button_start span{font-size:24px; font-weight:bold; color:white; cursor:pointer;}
 
 #dev{display:none; width:100%; z-index: 10000; position:absolute; bottom:0px;}
 #dev input{width:100%; height:20px; font-size: 16px;}
 
 #footer{width:100%; height:39px; position:absolute; left:0; bottom:0; background-color:rgba(0,0,0,0.6); overflow:hidden;}
-#footer .link{padding:4px; display:block; position:absolute; z-index:1000; cursor:pointer;}
+#footer .link{padding:4px; display:block; z-index:1000; cursor:pointer;float:left;}
 
-/* UNUSED
-#launcher_bnr{width:533px; height:129px; position:absolute; right:38px; top:30px;}
-#launcher_bnr .bnr{width:523px; height:129px; position:absolute; left:0; top:0; background:no-repeat 0px 0px; overflow:hidden;}
-#launcher_bnr .bnr img{margin-left:1px;}
-#launcher_bnr .bnr .frame{width:523px; height:129px; position:absolute; left:0; top:0; background:no-repeat 0px 0px; cursor:pointer;}
-#launcher_bnr .dots{width:10px; position:absolute; right:0; top:0; max-height:129px;}
-#launcher_bnr .dots ul{position:relative; width:10px; padding-top:6px;}
-#launcher_bnr .dots li{display:block; width:10px; height:10px; padding:6px 0; position:relative;}
-#launcher_bnr .dots li .dot{width:10px; height:10px; background:no-repeat 0px 0px; cursor:pointer;}
-#launcher_bnr .dots li .dot.crr,
-#launcher_bnr .dots li .dot:hover{background-position:0px -10px;}
-#launcher_bnr .dots li .dot img{display:none;}
-#launcher_info_list{width:535px; height:288px; position:absolute; right:38px; top:163px; overflow:hidden; overflow-y:auto;}
+#launcher_info_list{width:535px; height:240px; position:absolute; right:38px; padding:5px; top:135px; overflow:hidden; overflow-y:auto; background-color:rgba(0,0,0,0.5); border-radius:3px 3px 3px 3px; border: 1px solid #a6a08a;}
 #launcher_info_list .important_info, #launcher_info_list .normal_info{margin-bottom:5px;}
 #launcher_info_list .head{width:513px; height:23px; position:relative;}
-#launcher_info_list .head .lbl{position:absolute; left:0; top:0; width:513px; height:23px; background:no-repeat 0px 0px;}
+#launcher_info_list .head .lbl{position:absolute; left:0; top:0; width:513px; height:23px;}
 #launcher_info_list .head a{position:absolute; right:10px; top:6px; display:block; width:35px; height:13px; background:no-repeat 0px 0px;}
 #launcher_info_list .head a:hover{background-position:0px -13px;}
 #launcher_info_list ul.article{margin-left:18px; width:517px; position:relative;}
@@ -140,6 +124,44 @@ body{background:#092314; font-family:sans-serif; color:#d1c0a5; font-size:14px; 
 #launcher_info_list .important_info ul.article li .body a:hover{color:#F8DD81;}
 #launcher_info_list ul.article li .icon{width:30px; height:14px; background:no-repeat center center;}
 #launcher_info_list a{cursor:pointer;}
+
+#launcher_modal{width:100%; height:100%; position:fixed; left:0; top:0;z-index:1000; display:none; }
+#launcher_modal .modal{width:100%; height:100%; position:absolute; left:0; top:0;}
+#launcher_modal .dialog{position:absolute; left:282px; top:140px; width:560px; height:320px; background:url(../img/modelbg.jpeg) round;}
+#launcher_modal .dialog p{color:#d1c0a5; font-size:18px; line-height:36px; width:100%; position:relative; text-align:center; padding-top:60px;}
+#launcher_modal .dialog p.alert{line-height:26px; padding-top:90px; font-size:20px;}
+#launcher_modal .dialog p span.uid{font-size:12px;}
+#launcher_modal .dialog p span.attention{color:#f4de22;}
+#launcher_modal .dialog p span.notes{color:#eb3535; font-size:16px; line-height:20px;}
+#launcher_modal .dialog p div.sp{width:100%; height:10px;}
+#launcher_modal .dialog .btn_box{width:100%; height:44px; position:absolute; left:0; top:252px;}
+#launcher_modal .dialog .btns{text-align:center; margin:0 auto; position:relative; overflow:hidden;}
+#launcher_modal .dialog .btns ul{position:relative; left:50%; float:left; list-style:none}
+#launcher_modal .dialog .btns ul li{position:relative; left:-50%; float:left; margin-left:33px;}
+#launcher_modal .dialog .btns ul li:first-child{margin-left:5px;}
+#launcher_modal .dialog .btns ul li div{display:block; width:130px; height:35px; padding-top:9px; position:relative; background:url(../img/button_option.png) no-repeat 0px 0px; text-decoration:none; color:white; font-weight:bold; font-size:18px; line-height:18px; text-align:center; cursor:pointer;}
+#launcher_modal .dialog .btns ul li div:hover,
+#launcher_modal .dialog .btns ul li div.hover{background:url(../img/button_option_hover.png) no-repeat 0px 0px;}
+
+#launcher_menu{height:86px; position:absolute; left:535px; top:416px; overflow:hidden;}
+#launcher_menu .btn{width:82px; height:86px; background:no-repeat 0px 0px; float:left; margin:0 2px; cursor:pointer;}
+#launcher_menu .btn:hover{background-position:0px -86px;}
+#launcher_menu .btn.manual{background-image:url(../img/manual.png);}
+#launcher_menu .btn.pastebin{background-image:url(../img/pastebin.png);}
+
+/* UNUSED
+#launcher_bnr{width:533px; height:129px; position:absolute; right:38px; top:30px;}
+#launcher_bnr .bnr{width:523px; height:129px; position:absolute; left:0; top:0; background:no-repeat 0px 0px; overflow:hidden;}
+#launcher_bnr .bnr img{margin-left:1px;}
+#launcher_bnr .bnr .frame{width:523px; height:129px; position:absolute; left:0; top:0; background:no-repeat 0px 0px; cursor:pointer;}
+#launcher_bnr .dots{width:10px; position:absolute; right:0; top:0; max-height:129px;}
+#launcher_bnr .dots ul{position:relative; width:10px; padding-top:6px;}
+#launcher_bnr .dots li{display:block; width:10px; height:10px; padding:6px 0; position:relative;}
+#launcher_bnr .dots li .dot{width:10px; height:10px; background:no-repeat 0px 0px; cursor:pointer;}
+#launcher_bnr .dots li .dot.crr,
+#launcher_bnr .dots li .dot:hover{background-position:0px -10px;}
+#launcher_bnr .dots li .dot img{display:none;}
+
 #launcher_info_detail{width:532px; height:423px; position:absolute; right:38px; top:30px; background:no-repeat 0px 0px;}
 #launcher_info_detail .article_frame{width:532px; height:423px; position:absolute; left:0; top:0; overflow:hidden; overflow-y:auto;}
 #launcher_info_detail .article_frame .article{width:498px; min-height:394px; position:relative; margin:10px 0 10px 13px; padding-top:9px; background-color:#fef5e6; font-family:"ＭＳ Ｐゴシック", "MS PGothic", sans-serif; font-size:14px; line-height:18px; color:#333333;}
@@ -149,11 +171,6 @@ body{background:#092314; font-family:sans-serif; color:#d1c0a5; font-size:14px; 
 #launcher_info_detail .btn_back{cursor:pointer; width:160px; height:18px; position:absolute; left:184px; bottom:6px; background:no-repeat 0px 0px;}
 #launcher_info_detail .btn_back:hover{background-position:0px -18px;}
 #launcher_info_detail a{cursor:pointer;}
-
-#launcher_menu{height:86px; position:absolute; right:14px; top:467px; overflow:hidden;}
-#launcher_menu .btn{width:82px; height:86px; background:no-repeat 0px 0px; float:right; margin:0 2px; cursor:pointer;}
-#launcher_menu .btn:hover{background-position:0px -86px;}
-#launcher_menu .btn.hangameb,#launcher_menu .btn.hancoin{display:none;}
 
 #launcher_footer{width:100%; height:39px; position:absolute; left:0; bottom:0; overflow:hidden;}
 #launcher_footer .btn{display:block; position:absolute; z-index:1000; cursor:pointer;}
@@ -167,24 +184,6 @@ body{background:#092314; font-family:sans-serif; color:#d1c0a5; font-size:14px; 
 #launcher_footer .share .btn.tw{width:28px; height:27px; background-position:0px 0px;}
 #launcher_footer .share .btn.fb{width:28px; height:27px; background-position:-28px 0px;}
 #launcher_footer .share .btn.yt{width:50px; height:21px; margin-top:3px; background-position:-56px -3px;}
-
-#launcher_modal{width:100%; height:100%; position:fixed; left:0; top:0; display:none; z-index:1000;}
-#launcher_modal .modal{width:100%; height:100%; position:absolute; left:0; top:0;}
-#launcher_modal .dialog{position:absolute; left:282px; top:140px; width:560px; height:320px; background:url(images/dialog/bg.jpg) no-repeat 0px 0px;}
-#launcher_modal .dialog p{color:#d1c0a5; font-size:18px; line-height:36px; width:100%; position:relative; text-align:center; padding-top:105px;}
-#launcher_modal .dialog p.alert{line-height:26px; padding-top:90px; font-size:20px;}
-#launcher_modal .dialog p span.uid{font-size:12px;}
-#launcher_modal .dialog p span.attention{color:#f4de22;}
-#launcher_modal .dialog p span.notes{color:#eb3535; font-size:16px; line-height:20px;}
-#launcher_modal .dialog p div.sp{width:100%; height:10px;}
-#launcher_modal .dialog .btnBox{width:100%; height:44px; position:absolute; left:0; top:252px;}
-#launcher_modal .dialog .btns{text-align:center; margin:0 auto; position:relative; overflow:hidden}
-#launcher_modal .dialog .btns ul{position:relative; left:50%; float:left; list-style:none}
-#launcher_modal .dialog .btns ul li{position:relative; left:-50%; float:left; margin-left:33px;}
-#launcher_modal .dialog .btns ul li:first-child{margin-left:5px;}
-#launcher_modal .dialog .btns ul li div{display:block; width:200px; height:35px; padding-top:9px; position:relative; background:no-repeat 0px 0px; text-decoration:none; color:#d1c0a5; font-weight:bold; font-size:18px; line-height:18px; text-align:center; cursor:pointer;}
-#launcher_modal .dialog .btns ul li div:hover,#launcher_modal .dialog .btns ul li div.hover{background-position:0px -44px;}
-#launcher_modal .dialog .btns ul li div.wait:hover,#launcher_modal .dialog .btns ul li div.wait.hover{background-position:0px 0px; cursor:default;}
 
 .scroll_bar_box{width:10px; position:absolute;}
 .scroll_bar_box_base{width:10px; height:100%; position:absolute; right:0; top:0; border-radius:5px; background:#000; opacity:0.4; -moz-opacity:0.4; filter: alpha(opacity=40); -ms-filter:"alpha(opacity=40)";}
